# Threat-Drill

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
blue_teaming/: __init__.py
blue_teaming/agents/: __init__.py  defense_agent.py
blue_teaming/orchestrator/: __init__.py  defense_orchestrator.py
blue_teaming/skills/: __init__.py  base.py  detection.py  forensics.py  hardening.py  response.py
deployment/cloud_run/: Dockerfile  service.yaml
docs/: google-cloud-inquiry.md
dynamic_proxy/: __init__.py
dynamic_proxy/interceptor/: realtime_proxy.py
feedback_loop/: __init__.py
feedback_loop/cloud_functions/: main.py
feedback_loop/policy_engine/: self_correction.py
feedback_loop/pubsub/: __init__.py  event_publisher.py
gatekeeper/: __init__.py
gatekeeper/app/: __init__.py  main.py
gatekeeper/config/: __init__.py  settings.py
intelligence_center/: __init__.py
intelligence_center/analyzers/: __init__.py  deep_think.py  primary_filter.py
intelligence_center/models/: __init__.py  gemini_client.py
policy_storage/: __init__.py
policy_storage/firestore/: __init__.py  policy_store.py
policy_storage/vector_search/: __init__.py  vector_engine.py
red_teaming/: __init__.py
red_teaming/agents/: attack_agent.py  react_executor.py
red_teaming/mcp_server/: __init__.py  attack_tools.py  playwright_mcp.py  sandbox_verifier.py
red_teaming/orchestrator/: __init__.py  attack_orchestrator.py
red_teaming/skills/: __init__.py  ai_attacks.py  auth_attacks.py  base.py  owasp_llm_attacks.py  owasp_web_attacks.py  security_checks.py  web_attacks.py
scripts/: deploy.sh  generate_ui_icons.py
shared/: __init__.py
shared/constants/: __init__.py
shared/llm/: __init__.py  ollama_client.py
shared/schemas/: __init__.py  feedback.py  security.py
shared/utils/: __init__.py  logging.py  metrics.py  target_allowlist.py  validators.py
static_analyzer/: __init__.py
static_analyzer/github_integration/: repo_analyzer.py
static_analyzer/report_generator/: audit_report.py
static_analyzer/vulnerability_scanner/: ai_app_scanner.py
vulnerable-genai-app/: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
vulnerable-genai-app/app/: config.py  gemini_client.py  main.py
vulnerable-genai-app/app/routers/: admin.py  chat.py
vulnerable-genai-app/data/: users.json
(+10 files in other folders)
